# recommendation-system-local

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  architecture.md  architecture_v1.md  database_schema.md  docker-compose.yml  future_implementation.md  implementation_plan.md  implementation_plan_v1.md  problem-statement.md  problem_statement.md  prompt_template.md  pyproject.toml  requirements-dev.txt  requirements.txt  script.sh
configs/: data.yaml  retrain.yaml  training.yaml
data/features/: item_features.csv  popularity.csv
data/processed/: interactions.csv  item_mapping.json  test.csv  train.csv  user_mapping.json  val.csv
mlruns/0/: meta.yaml
mlruns/106385887317018042/: meta.yaml
mlruns/106385887317018042/36af12c3d58c435bb6038aacb43c6ab6/: meta.yaml
mlruns/106385887317018042/6150a92db21245c099fbd9ad20e28af3/: meta.yaml
mlruns/624129806290713687/: meta.yaml
models/production/: item_embeddings.npy  item_features.json  item_index.faiss  model_metadata.json  user_embeddings.npy
src/: config.py
src/api/: fallback.py  logger.py  main.py  model_loader.py  recommender.py  schemas.py
src/data/: download.py  mappings.py  preprocess.py  split.py
src/features/: build.py
src/frontend/: api_client.py  app.py
src/frontend/pages/: about.py  personalized.py  (+2 more)
src/models/: als.py  base.py  index.py  item_item.py
src/monitoring/: dashboard.py  kpis.py  replay_eval.py
src/training/: evaluate.py  export.py  mlflow_utils.py  train.py
tests/: test_api.py  test_data.py  test_evaluation.py  test_export.py  test_frontend.py  test_models.py
(+176 files in other folders)
